fixed sweetalert error plus some start on netTree

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.49",
     "babel-runtime": "^6.23.0",
     "bcrypt": "^0.8.7"
   },
